--- a/css/styles.css
+++ b/css/styles.css
@@ -178,3 +178,21 @@ footer {
 .zoomed {
   transform: scale(1.5); /* Zoom effect */
 }
+
+.review-card {
+  border: 1px solid #ddd;
+  padding: 20px;
+  margin: 20px 0;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+}
+
+.review-card h3 {
+  font-size: 1.5rem;
+  margin-bottom: 5px;
+}
+
+.review-card p {
+  margin: 10px 0;
+}
+
