--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,10 @@ body {
   background-position: center center; 
   background-attachment: fixed;
   margin: 0; 
+
+  @media screen and (max-width: 768px) {
+    background-size: contain; /* or other appropriate value for smaller screens */
+  }
 }
 
 header {
@@ -110,3 +114,17 @@ footer {
   margin: 10px 0;
 }
 
+/* video */
+.video-wrapper {
+  position: relative;
+  overflow: hidden;
+  padding-top: 56.25%; 
+}
+
+.video-wrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
